plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.postgresql:postgresql:42.7.2'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    implementation 'com.vladmihalcea:hibernate-types-60:2.19.2'
    compileOnly("org.springframework.boot:spring-boot-devtools")
    //Agregado para que se reinicie solo el servidor cuando hayan cambios
    implementation "org.springframework.boot:spring-boot-starter-security" // Agregado para implementar el jwt
    implementation 'io.jsonwebtoken:jjwt:0.12.6'
    implementation 'org.mapstruct:mapstruct:1.5.0.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.0.Final'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.named('jar') {
    enabled = false
}

